--- a/ProjectManager/src/index.html
+++ b/ProjectManager/src/index.html
@@ -3,30 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Project Manager</title>
-  <base href="/">
+  <base href="/ProjectManager/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script>
-    function closeModal(){
-      $('#editTask').modal('toggle');
-      return false;
-    }
-    function closeProjectModal() {
-      $('#searchProject').modal('toggle');
-      return false;
-    }
-    function closePTaskModal() {
-      $('#searchParentTask').modal('toggle');
-      return false;
-    }
-    function closeUserModal() {
-      $('#searchUser').modal('toggle');
-      return false;
-    }
-  </script>
+  <script src="assets/Common.js"></script>
 </head>
 <body>
   <app-root></app-root>
